# bazel-coverage-bug

./: .bazelrc  .gitignore  README.md
repro/: BUILD.bazel
repro/src/main/java/com/repro/: Repro.java
repro/src/test/java/com/repro/: ReproTest.java
